feature: add husky for commit rules

--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
   },
   "scripts": {
     "build": "esbuild app/javascript/*.* --bundle --sourcemap --outdir=app/assets/builds --public-path=assets",
-      "test": "jest"
+    "test": "jest",
+    "prepare": "husky install"
   },
   "devDependencies": {
+    "husky": "^8.0.3",
     "jest": "^29.5.0"
   }
 }
