--- a/.gitattributes
+++ b/.gitattributes
@@ -1,5 +1,6 @@
 # See https://git-scm.com/docs/gitattributes for more about git attribute files.
-
+config/credentials/*.yml.enc diff=rails_credentials
+config/credentials.yml.enc diff=rails_credentials
 # Mark the database schema as having been generated.
 db/schema.rb linguist-generated
 
