--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "dependencies": {
     "@babel/preset-env": "^7.20.2",
     "@babel/preset-react": "^7.18.6",
-    "@hotwired/stimulus": "^3.2.1",
-    "@hotwired/turbo-rails": "^7.3.0",
+    "@hotwired/stimulus": "^3.2.2",
+    "@hotwired/turbo-rails": "^8.0.0-beta.2",
     "babel-jest": "^29.5.0",
     "esbuild": "^0.17.11",
     "react": "^18.2.0",
